# reshaping-business-with-ai

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.py
notebooks/: 00_eda.ipynb  01_churn_optimistaion.ipynb  eda.ipynb  modeling.ipynb
src/: dataloader.py  modeling.py
